# fiap-tech-challenge-churn

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: deploy-architecture.md  ml-canvas.md  model-card.md  monitoring-plan.md
notebooks/: 01-eda.ipynb  02-baselines.ipynb  03-mlp.ipynb
src/churn_nn/: __init__.py  config.py  train.py
src/churn_nn/api/: __init__.py  app.py  schemas.py
src/churn_nn/data/: __init__.py  preprocessing.py
src/churn_nn/models/: __init__.py  mlp.py
tests/: conftest.py  test_api.py  test_preprocessing.py  test_schema.py  test_smoke.py
